@@ -12,6 +12,7 @@ Engine fixes:
 * Mouse movement and mouse aim now calculate direction relative to the player instead of relative to the screen.
 * Fixed enemy AI so that enemies can now enter combat if a hero ally is in their proximity.
 * Fix --data-path command line flag on Windows.
+* Fixed dialog not being available if it lacked a topic.
 
 Game updates:
 
